# jsonnet-docblock-parser

./: .pylintrc  .travis.yml  README.md  app.py  setup.cfg  setup.py
jsonnet_docblock_parser/: __init__.py  common.py  generator.py  parser.py
jsonnet_docblock_parser/tests/: __init__.py  test_parser.py
jsonnet_docblock_parser/tests/resources/: no_comments.jsonnet  test.jsonnet
scripts/: jdp
