[metadata]
name = jsonnet_docblock_parser
version = 0.1.3
url = https://github.com/legovaer/jsonnet-docblock-parser
author = Levi Govaerts
author_email = levi@scalecity.io
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Environment :: Other Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Documentation :: Sphinx
    Topic :: Text Processing :: Markup
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = ~=3.6
package_dir = jsonnet_docblock_parser=jsonnet_docblock_parser
packages = find:
